fixed ghost z-index issue with text.£

--- a/src/components/PreviewThumb/styles.scss
+++ b/src/components/PreviewThumb/styles.scss
@@ -2,7 +2,7 @@
 .wrapper {
 	position: relative;
 	width: 100%;
-	z-index: 3;
+	z-index: 0;
 	--thumbnail_width: 100%;
 	--thumbnail_height: 38vh;
 }
